--- a/assets/css/store-v2.css
+++ b/assets/css/store-v2.css
@@ -155,7 +155,7 @@ color:#fff;
 font-size:56px;
 text-align:center;
 font-weight:300;
-font-family: 'Lato', sans-serif;
+font-family: 'Montserrat', sans-serif;
 }
 
 .sections h2,
